--- a/frontend/army_mentoring/src/components/Routes/MyMentoring/MyMentoringCard.scss
+++ b/frontend/army_mentoring/src/components/Routes/MyMentoring/MyMentoringCard.scss
@@ -40,9 +40,14 @@
         height: 100%;
         justify-content: space-between;
         align-items: flex-start;
+        text-decoration: none;
 
         & > .title{
-            font-weight: bold;
+            font-family: 'Do Hyeon', sans-serif;
+            width: 100%;
+            word-wrap: break-word;
+            font-size: 2rem;
+            
         }
 
         & > .participants {
