--- a/frontend/army_mentoring/src/components/Routes/MyMentoring/MymentoringList.scss
+++ b/frontend/army_mentoring/src/components/Routes/MyMentoring/MymentoringList.scss
@@ -21,6 +21,7 @@
 
         & + .section {
             margin-top: 60px;
+            height: 600px;
         }
 
         .mentoring_cards{
@@ -28,6 +29,10 @@
             width: 100%;
             margin: 0 50px;
             
+            & > .more{
+                text-decoration: none;
+            }
+
             & > a {
                 & > .MyMentoringCard{
                     margin: 0 30px;
@@ -42,13 +47,17 @@
             width: 100%;
             height: 75%;
             background-color: $primary;
-            padding: 40px 60px;
+            padding: 20px 60px;
+            padding-bottom: 40px;
             display: flex;
             flex-direction: column;
             
             & > h2 {
-                font-weight: bold;
-                font-size: 25px;
+                font-family: 'Do Hyeon', sans-serif;
+                font-size: 3rem;
+                width: 100%;
+                text-align: left;
+                padding: 20px 0px;
             }
         }
     }
