--- a/frontend/army_mentoring/src/components/Routes/MyMentoring/MyMentoringCard.scss
+++ b/frontend/army_mentoring/src/components/Routes/MyMentoring/MyMentoringCard.scss
@@ -30,6 +30,7 @@
 
     & > img {
         height: 50%;
+        max-height: 50%;
         object-fit: cover;
         border-radius: 20px 20px 20px 0px;
         margin-bottom: 20px;
@@ -43,11 +44,17 @@
         text-decoration: none;
 
         & > .title{
-            font-family: 'Do Hyeon', sans-serif;
             width: 100%;
+            font-size: 1.5rem;
+            font-family: 'Do Hyeon', sans-serif;
+            display: -webkit-box;
             word-wrap: break-word;
-            font-size: 2rem;
-            
+            overflow: hidden;
+            text-overflow: ellipsis;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 2;
+            line-height: 1.5em;
+            max-height: 3em;
         }
 
         & > .participants {
