[update]: css 기타 마이너 업데이트
css 기타 마이너 업데이트
gh-58

--- a/frontend/army_mentoring/src/components/Routes/Community/ArticleList.scss
+++ b/frontend/army_mentoring/src/components/Routes/Community/ArticleList.scss
@@ -27,9 +27,7 @@
 
 		.txt_field{
 			background-color: $white;
-			margin-left: 15px;
-			margin-top: 15px;
-			margin-bottom: 15px;
+			margin: 10px 10px;
 			border-width: 2px;
 		}
 
