--- a/frontend/army_mentoring/src/components/Routes/Mentoring/MakeMentoring.scss
+++ b/frontend/army_mentoring/src/components/Routes/Mentoring/MakeMentoring.scss
@@ -1,4 +1,5 @@
 @import "../preset.scss";
+@import '../Home.scss';
 
 .MakeMentoring {
 	& > .make_mentoring_container {
@@ -292,18 +293,17 @@
 				& > .selecter{
 					
 					font-family: 'Do Hyeon', sans-serif;
-					font-size: 1.5rem;
+					font-size: 2rem;
 					text-align: left;
 					width: max-content;
-					margin: 1% 0%;
-					margin-right: 38%;
-					margin-left: 42%;
-					padding: 1% 2%;
+					margin: 1% 40%;
+					padding: 0.5% 1%;
 				}
 
 			}
 
 			& > .button_container{
+				
 				width: 20%;
 				margin: 5% 40%;
 
