--- a/frontend/army_mentoring/src/components/Routes/Mentoring/MentoringList.scss
+++ b/frontend/army_mentoring/src/components/Routes/Mentoring/MentoringList.scss
@@ -14,6 +14,7 @@
 		max-width: 1280px;
 		margin: 0px auto;
 		padding-top: 50px;
+
 		
 		& > .mentoring-list-header {
 			width: 100%;
@@ -139,6 +140,12 @@
 	
 	button {
 		margin-left: 20px;
+		margin-bottom: 20px;
+	}
+
+	& > .button_more{
+		font-family: 'Do Hyeon', sans-serif;
+		font-size: 2rem;
 		margin-bottom: 20px;
 	}
 }
